Updating lib